<resources>
    <string name="app_name">SW Block Editor</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="besome_blog_url">http://medium.com/sketchware/all</string>
    <string name="block_add_list_int" formatted="false">add %d to %m.listInt</string>
    <string name="block_add_list_str" formatted="false">add %s to %m.listStr</string>
    <string name="block_and" formatted="false">%b and %b</string>
    <string name="block_bigger" formatted="false">%d > %d</string>
    <string name="block_break">stop</string>
    <string name="block_calendar_add" formatted="false">Calendar %m.calendar add %m.calendarField value %d</string>
    <string name="block_calendar_diff" formatted="false">Calendar Difference %m.calendar - %m.calendar</string>
    <string name="block_calendar_format" formatted="false">Calendar %m.calendar Format %s</string>
    <string name="block_calendar_get_now">Calendar %m.calendar getNow</string>
    <string name="block_calendar_set" formatted="false">Calendar %m.calendar set %m.calendarField value %d</string>
    <string name="block_clear_list">clear %m.list</string>
    <string name="block_contain_list_int" formatted="false">%m.listInt contains %d</string>
    <string name="block_contain_list_str" formatted="false">%m.listStr contains %s</string>
    <string name="block_decrease_int">%m.varInt decrease 1</string>
    <string name="block_delete_list" formatted="false">delete at %d of %m.list</string>
    <string name="block_divide" formatted="false">%d / %d</string>
    <string name="block_do_toast">showMessage %s</string>
    <string name="block_else">else</string>
    <string name="block_equal" formatted="false">%d = %d</string>
    <string name="block_false">false</string>
    <string name="block_file_get_data" formatted="false">File %m.file getData key %s</string>
    <string name="block_file_remove_data" formatted="false">File %m.file removeData key %s</string>
    <string name="block_file_set_data" formatted="false">File %m.file setData key %s value %s</string>
    <string name="block_finish_activity">Finish Activity</string>
    <string name="block_forever">forever</string>
    <string name="block_get_at_list_int" formatted="false">get at %d of %m.listInt</string>
    <string name="block_get_at_list_str" formatted="false">get at %d of %m.listStr</string>
    <string name="block_get_checked">CheckBox %m.checkbox getChecked</string>
    <string name="block_get_enable">%m.view getEnable</string>
    <string name="block_get_rotate">ImageView %m.imageview getRotation</string>
    <string name="block_get_text">%m.textview getText</string>
    <string name="block_if">if %b then</string>
    <string name="block_if_else">if %b then</string>
    <string name="block_increase_int">%m.varInt increase 1</string>
    <string name="block_indexof_list_int" formatted="false">index %d in %m.listInt</string>
    <string name="block_indexof_list_str" formatted="false">index %s in %m.listStr</string>
    <string name="block_insert_list_int" formatted="false">insert %d at %d to %m.listInt</string>
    <string name="block_insert_list_str" formatted="false">insert %s at %d to %m.listStr</string>
    <string name="block_intent_get_string">Activity getExtra key %s</string>
    <string name="block_intent_put_extra" formatted="false">Intent %m.intent putExtra key %s value %s</string>
    <string name="block_intent_set_action" formatted="false">Intent %m.intent setAction %m.intentAction</string>
    <string name="block_intent_set_data" formatted="false">Intent %m.intent setData %s.intentData</string>
    <string name="block_intent_set_screen" formatted="false">Intent %m.intent setScreen %m.activity</string>
    <string name="block_length_list">length of %m.list</string>
    <string name="block_list_get_checked_count">ListView %m.listview getCheckedCount</string>
    <string name="block_list_get_checked_position">ListView %m.listview getCheckedPosition</string>
    <string name="block_list_get_checked_positions" formatted="false">ListView %m.listview getCheckedPositions to %m.listInt</string>
    <string name="block_list_refresh">ListView %m.listview refreshData</string>
    <string name="block_list_set_data" formatted="false">ListView %m.listview setListViewData %m.listStr</string>
    <string name="block_list_set_item_checked" formatted="false">ListView %m.listview setItemChecked pos %d value %b</string>
    <string name="block_minus" formatted="false">%d - %d</string>
    <string name="block_not">not %b</string>
    <string name="block_or" formatted="false">%b or %b</string>
    <string name="block_plus" formatted="false">%d + %d</string>
    <string name="block_random" formatted="false">pick random %d to %d</string>
    <string name="block_repeat">repeat %d</string>
    <string name="block_rest" formatted="false">%d % %d</string>
    <string name="block_set_bg_color" formatted="false">%m.view setBackgroundColor %m.color</string>
    <string name="block_set_checked" formatted="false">CheckBox %m.checkbox setChecked %b</string>
    <string name="block_set_clickable" formatted="false">%m.view setClickable %b</string>
    <string name="block_set_enable" formatted="false">%m.view setEnable %b</string>
    <string name="block_set_image" formatted="false">ImageView %m.imageview setImage %m.resource</string>
    <string name="block_set_rotate" formatted="false">ImageView %m.imageview setRotation %d</string>
    <string name="block_set_text" formatted="false">%m.textview setText %s</string>
    <string name="block_set_text_color" formatted="false">%m.textview setTextColor %m.color</string>
    <string name="block_set_var_bool" formatted="false">set %m.varBool to %b</string>
    <string name="block_set_var_int" formatted="false">set %m.varInt to %d</string>
    <string name="block_set_var_str" formatted="false">set %m.varStr to %s</string>
    <string name="block_set_visible" formatted="false">%m.view setVisible %m.visible</string>
    <string name="block_smaller" formatted="false">%d &lt; %d</string>
    <string name="block_spn_get_selection">Spinner %m.spinner getSelection</string>
    <string name="block_spn_refresh">Spinner %m.spinner refreshData</string>
    <string name="block_spn_set_data" formatted="false">Spinner %m.spinner setSpinnerData %m.listStr</string>
    <string name="block_spn_set_selection" formatted="false">Spinner %m.spinner setSelection %d</string>
    <string name="hint_enter_var_name">Enter variable name(Case-sensitive)</string>
    <string name="logic_popup_btn_boolean">ADD BOOLEAN</string>
    <string name="logic_popup_btn_label">ADD LABEL</string>
    <string name="logic_popup_btn_number">ADD NUMBER</string>
    <string name="logic_popup_btn_string">ADD STRING</string>
    <string name="logic_popup_desc_list_name">List name</string>
    <string name="logic_popup_desc_list_type">List type</string>
    <string name="logic_popup_hint_block_name">Enter new block name</string>
    <string name="logic_popup_hint_boolean">Enter a boolean name</string>
    <string name="logic_popup_hint_label">Enter a label text</string>
    <string name="logic_popup_hint_number">Enter a number name</string>
    <string name="logic_popup_hint_string">Enter a string name</string>
    <string name="title_type_integer">Integer</string>
    <string name="title_type_string">String</string>
</resources>