<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:gravity="center|left" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/logic_popup_desc_list_type" />
        <RadioGroup android:orientation="vertical" android:id="@+id/rg_type" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <RadioButton android:id="@+id/rb_int" android:layout_width="fill_parent" android:layout_height="40.0dip" android:checked="true" android:text="@string/title_type_integer" />
            <RadioButton android:id="@+id/rb_string" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/title_type_string" />
        </RadioGroup>
        <TextView android:textSize="16.0sp" android:gravity="center|left" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/logic_popup_desc_list_name" />
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_input" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <EditText android:textSize="16.0sp" android:id="@+id/ed_input" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/hint_enter_var_name" android:lines="1" android:inputType="text" android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>

