<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <HorizontalScrollView android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <LinearLayout android:orientation="horizontal" android:id="@+id/remove_area" android:layout_width="fill_parent" android:layout_height="24.0dip" />
                <RelativeLayout android:orientation="horizontal" android:id="@+id/block_area" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </LinearLayout>
        </HorizontalScrollView>
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <EditText android:textSize="16.0sp" android:id="@+id/ed_name" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/logic_popup_hint_block_name" android:lines="1" android:inputType="text" android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout android:orientation="horizontal" android:background="#ffdddddd" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_boolean" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="8.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:id="@+id/ed_boolean" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/logic_popup_hint_boolean" android:lines="1" android:inputType="text" android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="12.0sp" android:id="@+id/add_boolean" android:layout_width="110.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/logic_popup_btn_boolean" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_number" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="8.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:id="@+id/ed_number" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/logic_popup_hint_number" android:lines="1" android:inputType="text" android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="12.0sp" android:id="@+id/add_number" android:layout_width="110.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/logic_popup_btn_number" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_string" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="8.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:id="@+id/ed_string" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/logic_popup_hint_string" android:lines="1" android:inputType="text" android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="12.0sp" android:id="@+id/add_string" android:layout_width="110.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/logic_popup_btn_string" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:id="@+id/ti_label" android:layout_width="80.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="8.0dip" android:layout_weight="1.0">
                <EditText android:textSize="14.0sp" android:id="@+id/ed_label" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/logic_popup_hint_label" android:lines="1" android:layout_weight="1.0" android:inputType="text" android:imeOptions="actionDone" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button android:textSize="12.0sp" android:id="@+id/add_label" android:layout_width="110.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/logic_popup_btn_label" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

